--- a/dev.ipynb
+++ b/dev.ipynb
@@ -17,15 +17,17 @@
    "outputs": [],
    "source": [
     "template_str = '''\n",
-    "You are a competitive coding coach traing the student.\n",
+    "You are a competitive coding coach traing a student.\n",
     "Here's some python code that the student wrote for a code problem, and it failed to pass unit tests. \n",
-    "Identify the mistake pattern in the code implentation, and give the student advice on how to prevent the mistake and where to be careful.\n",
+    "Identify the mistake pattern in the code implentation, and give the student feedback on what went wrong and advice on how to prevent the mistake.\n",
+    "If you think there are highlights in the code, feel free to give a compliment, but be sure to point out what went well.\n",
     "\n",
-    "There are 2 broad areas of mistake patterns: 1. Wrong understanding of algorithms, and 2. Programming errors.\n",
-    "Some possible mistake patterns in programming errors include:\n",
+    "There are 2 broad areas of mistake patterns: 1. Misunderstanding the problem, or coming up with the wrong solution, and 2. Implementation (coding) errors.\n",
+    "Some possible mistake patterns in coding errors include:\n",
     "off-by-one error, language usage error, confusion of comparison vs assignment, typos\n",
     "\n",
-    "A reference implementation is also provided. The student's code is not expected to match exactly one\n",
+    "A reference implementation is also provided. The student's code is not expected to match exactly to the reference implementation.\n",
+    "Respond directly to the student by addressing the student directly as 'You'. \n",
     "\n",
     "Problem: ${PROBLEM}\n",
     "\n",
