let llm chime in when tests fail

--- a/dev.ipynb
+++ b/dev.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -224,23 +224,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'candidates': [{'output': \"The student's code has a off-by-one error in the bs function.\\nThe return value of bs should be mid+1 if the target is found, but the student's code returns mid.\\nThis is because the condition for returning mid+1 is input[mid] == target, but the condition for returning mid is input[mid] <= target.\",\n",
+       "{'candidates': [{'output': 'You made a mistake in the `union` function. You should be assigning the value of `self.find(b)` to `self.d[self.find(a)]`, not the other way around. This is because you want to update the value of `self.d[self.find(a)]` to be the same as the value of `self.find(b)`.\\n\\nHere is the corrected code:\\n\\n```python\\nclass UnionFind:\\n    def __init__(self):\\n        self.d = {}\\n\\n    def union(self, a, b):\\n        self.d[self.find(a)] = self.find(b)\\n    \\n    def find(self, a):\\n        b = self.d.get(a, a)\\n        if b != a:\\n            b = self.find(b)\\n        self.d[a] = b\\n        return b\\n\\n    def is_same(self, a, b):\\n        return self.find(a) == self.find(b)\\n```',\n",
        "   'safetyRatings': [{'category': 'HARM_CATEGORY_DEROGATORY',\n",
        "     'probability': 'NEGLIGIBLE'},\n",
        "    {'category': 'HARM_CATEGORY_TOXICITY', 'probability': 'NEGLIGIBLE'},\n",
        "    {'category': 'HARM_CATEGORY_VIOLENCE', 'probability': 'NEGLIGIBLE'},\n",
        "    {'category': 'HARM_CATEGORY_SEXUAL', 'probability': 'NEGLIGIBLE'},\n",
        "    {'category': 'HARM_CATEGORY_MEDICAL', 'probability': 'NEGLIGIBLE'},\n",
-       "    {'category': 'HARM_CATEGORY_DANGEROUS', 'probability': 'NEGLIGIBLE'}]}]}"
+       "    {'category': 'HARM_CATEGORY_DANGEROUS', 'probability': 'LOW'}]}]}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,6 +280,203 @@
    ],
    "source": [
     "type(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "\n",
+    "class UnionFind:\n",
+    "    def __init__(self):\n",
+    "        self.d = {}\n",
+    "\n",
+    "    def union(self, a, b):\n",
+    "        self.d[self.find(a)] = self.find(b)\n",
+    "    \n",
+    "    def find(self, a):\n",
+    "        b = self.d.get(a, a)\n",
+    "        if b != a:\n",
+    "            b = self.find(b)\n",
+    "        self.d[a] = b\n",
+    "        return b\n",
+    "\n",
+    "    def is_same(self, a, b):\n",
+    "        return self.find(a) == self.find(b)\n",
+    "\n",
+    "def solution(input: List[int]) -> List[int]:\n",
+    "    result = []\n",
+    "    union_find = UnionFind()\n",
+    "    for action, a, b in input:\n",
+    "        if action == 'union':\n",
+    "            union_find.union(a, b)\n",
+    "        elif action == 'is_same':\n",
+    "            result.append(union_find.is_same(a, b))\n",
+    "    \n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[True]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution([['union', 1, 2], ['is_same', 1, 2]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from importlib.resources import files\n",
+    "import tomllib\n",
+    "\n",
+    "toml = tomllib.loads(files('shared.data').joinpath('union_find.toml').read_text())\n",
+    "code = toml['metadata']['reference_implementation']\n",
+    "byte_code = compile(code, '<inline>', 'exec')\n",
+    "loc = {}\n",
+    "exec(byte_code, None, loc)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'List': typing.List,\n",
+       " 'UnionFind': __main__.UnionFind,\n",
+       " 'solution': <function __main__.solution(input: List[int]) -> List[int]>}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['union', 1, 2], ['union', 3, 4], ['is_same', 2, 3], ['union', 2, 3], ['is_same', 4, 1]] [False, True]\n",
+      "[False, True]\n",
+      "[['union', 1, 5], ['union', 2, 3], ['is_same', 3, 1], ['is_same', 5, 2], ['union', 3, 5], ['is_same', 5, 2]] [False, False, True]\n",
+      "[False, False, True]\n",
+      "[['union', 1, 2], ['union', 2, 3], ['union', 3, 4], ['is_same', 4, 1], ['union', 4, 5], ['is_same', 5, 4], ['is_same', 1, 5]] [True, True, True]\n",
+      "[True, True, True]\n",
+      "[['is_same', 1, 2], ['union', 1, 2], ['is_same', 1, 2]] [False, True]\n",
+      "[False, True]\n",
+      "[['is_same', 1, 1]] [True]\n",
+      "[True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for testcase in toml['testcases']:\n",
+    "    input, expected_output = testcase['input'], testcase['expected_output']\n",
+    "    print(input, expected_output)\n",
+    "    print(loc[toml['metadata']['entrypoint']](input))\n",
+    "    assert expected_output == loc[toml['metadata']['entrypoint']](input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wrong_impl = '''\n",
+    "from typing import List\n",
+    "\n",
+    "class UnionFind:\n",
+    "    def __init__(self):\n",
+    "        self.d = {}\n",
+    "\n",
+    "    def union(self, a, b):\n",
+    "        self.d[self.find(a)] == self.find(b)\n",
+    "    \n",
+    "    def find(self, a):\n",
+    "        b = self.d.get(a, a)\n",
+    "        if b != a:\n",
+    "            b = self.find(b)\n",
+    "        self.d[a] = b\n",
+    "        return b\n",
+    "\n",
+    "    def is_same(self, a, b):\n",
+    "        return self.find(a) == self.find(b)\n",
+    "\n",
+    "def solution(input: List[int]) -> List[int]:\n",
+    "    global UnionFind\n",
+    "    result = []\n",
+    "    union_find = UnionFind()\n",
+    "    for action, a, b in input:\n",
+    "        if action == 'union':\n",
+    "            union_find.union(a, b)\n",
+    "        elif action == 'is_same':\n",
+    "            result.append(union_find.is_same(a, b))\n",
+    "    \n",
+    "    return result\n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "s = wrong_impl.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"from typing import List\\n\\nclass UnionFind:\\n    def __init__(self):\\n        self.d = {}\\n\\n    def union(self, a, b):\\n        self.d[self.find(a)] = self.find(b)\\n    \\n    def find(self, a):\\n        b = self.d.get(a, a)\\n        if b != a:\\n            b = self.find(b)\\n        self.d[a] = b\\n        return b\\n\\n    def is_same(self, a, b):\\n        return self.find(a) == self.find(b)\\n\\ndef solution(input: List[int]) -> List[int]:\\n    global UnionFind\\n    result = []\\n    union_find = UnionFind()\\n    for action, a, b in input:\\n        if action == 'union':\\n            union_find.union(a, b)\\n        elif action == 'is_same':\\n            result.append(union_find.is_same(a, b))\\n    \\n    return result\""
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
    ]
   },
   {
