change server API data types to be modelled

--- a/dev.ipynb
+++ b/dev.ipynb
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,16 +461,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"from typing import List\\n\\nclass UnionFind:\\n    def __init__(self):\\n        self.d = {}\\n\\n    def union(self, a, b):\\n        self.d[self.find(a)] = self.find(b)\\n    \\n    def find(self, a):\\n        b = self.d.get(a, a)\\n        if b != a:\\n            b = self.find(b)\\n        self.d[a] = b\\n        return b\\n\\n    def is_same(self, a, b):\\n        return self.find(a) == self.find(b)\\n\\ndef solution(input: List[int]) -> List[int]:\\n    global UnionFind\\n    result = []\\n    union_find = UnionFind()\\n    for action, a, b in input:\\n        if action == 'union':\\n            union_find.union(a, b)\\n        elif action == 'is_same':\\n            result.append(union_find.is_same(a, b))\\n    \\n    return result\""
+       "\"from typing import List\\n\\nclass UnionFind:\\n    def __init__(self):\\n        self.d = {}\\n\\n    def union(self, a, b):\\n        self.d[self.find(a)] == self.find(b)\\n    \\n    def find(self, a):\\n        b = self.d.get(a, a)\\n        if b != a:\\n            b = self.find(b)\\n        self.d[a] = b\\n        return b\\n\\n    def is_same(self, a, b):\\n        return self.find(a) == self.find(b)\\n\\ndef solution(input: List[int]) -> List[int]:\\n    global UnionFind\\n    result = []\\n    union_find = UnionFind()\\n    for action, a, b in input:\\n        if action == 'union':\\n            union_find.union(a, b)\\n        elif action == 'is_same':\\n            result.append(union_find.is_same(a, b))\\n    \\n    return result\""
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
